<?xml version="1.0"?>
<package>
  <name>fawkes_msgs</name>
  <version>0.2.1</version>
  <description>Messages used by Fawkes to interact with ROS.</description>
  <license>GPLv2</license>

  <author>Tim Niemueller</author>
  <author>Till Hofmann</author>
  <maintainer email="niemueller@kbsg.rwth-aachen.de">Tim Niemueller</maintainer>

  <url type="website">https://trac.fawkesrobotics.org/wiki/Plugins/ros</url>
  <url type="repository">https://git.fawkesrobotics.org/fawkes_msgs.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
